--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,27 +31,35 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.5
-  http: ^0.13.4
-  just_audio: ^0.9.24
-  audio_service: ^0.18.4
-  go_router: ^4.0.0
-  bloc: ^8.0.3
-  flutter_bloc: ^8.0.1
-  infinite_scroll_pagination: ^3.2.0
-  audio_video_progress_bar: ^0.10.0
-  get_it: ^7.2.0
-  url_launcher: ^6.1.3
-  flutter_markdown: ^0.6.10+2
+  http: ^1.1.0
+  just_audio: ^0.9.36
+  audio_service: ^0.18.12
+  go_router: ^13.0.0
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
+  infinite_scroll_pagination: ^4.0.0
+  audio_video_progress_bar: ^2.0.1
+  get_it: ^7.6.0
+  url_launcher: ^6.2.2
+  flutter_markdown: ^0.6.18+2
   html_unescape: ^2.0.0
-  package_info_plus: ^1.4.2
-  path: ^1.8.1
-  sqflite: ^2.0.2+1
-  cached_network_image: ^3.2.1
-  sentry_flutter: ^6.9.1
-  intl: ^0.17.0
-  graphql: ^5.1.1
-  flutter_widget_from_html: ^0.8.5
-  macos_ui: ^1.4.1+1
+  package_info_plus: ^5.0.1
+  path: ^1.8.3
+  sqflite: ^2.3.0
+  cached_network_image: ^3.3.1
+  sentry_flutter: ^7.16.1
+  intl: ^0.19.0
+  graphql: ^5.1.3
+  flutter_widget_from_html: ^0.14.9
+  macos_ui: ^2.0.2
+  flutter_dotenv: ^5.1.0
+  video_player: ^2.8.2
+  chewie: ^1.7.5
+  vimeo_player_flutter: ^0.1.0
+  cloud_firestore: ^4.15.5
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.1
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
