--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,15 +43,17 @@ dependencies:
   url_launcher: ^6.1.3
   flutter_markdown: ^0.6.10+2
   html_unescape: ^2.0.0
-  package_info_plus: ^1.4.2
+  package_info_plus: ^4.2.0
   path: ^1.8.1
   sqflite: ^2.0.2+1
-  cached_network_image: ^3.2.1
-  sentry_flutter: ^6.9.1
+  cached_network_image: ^3.3.1
+  sentry_flutter: ^7.16.1
   intl: ^0.17.0
   graphql: ^5.1.1
-  flutter_widget_from_html: ^0.8.5
-  macos_ui: ^1.4.1+1
+  flutter_widget_from_html: ^0.10.6
+  sliver_tools: ^0.2.12
+  chewie: ^1.7.1
+  video_player: ^2.8.2
 
 dev_dependencies:
   flutter_test:
