--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,6 @@ dependencies:
   intl: ^0.19.0
   graphql: ^5.1.3
   flutter_widget_from_html: ^0.14.9
-  macos_ui: ^2.0.2
   flutter_dotenv: ^5.1.0
   video_player: ^2.8.2
   chewie: ^1.7.5
@@ -60,6 +59,7 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.1
   path_provider: ^2.0.15
+  syncfusion_flutter_pdfviewer: ^24.1.41
 
 dev_dependencies:
   flutter_test:
@@ -82,11 +82,14 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/images/categories/
     - assets/markdown/
     - assets/data/
     - .env
-
-  # An image asset can refer to one or more resolution-specific "variants", see
+    - assets/data/bd.json
+    - assets/bd/
+  
+# An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
   # For details regarding adding assets from package dependencies, see
